force-app/main/default/objects/OM_VID_FieldTranslations__mdt/OM_VID_FieldTranslations__mdt.object-meta.xml
<CustomObject>
    <label>Field Translations</label>
    <pluralLabel>Field Translations</pluralLabel>
</CustomObject>