force-app/main/default/objects/OM_VID_FieldTranslations__mdt/fields/OM_VID_FieldName__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_FieldName__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>