force-app/main/default/objects/OM_VID_FieldTranslations__mdt/fields/OM_VID_Language__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Español</fullName>
                <default>true</default>
                <label>Español</label>
            </value>
            <value>
                <fullName>Portugués</fullName>
            </value>
            <value>
                <fullName>Francés</fullName>
            </value>
            <value>
                <fullName>Inglés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>