force-app/main/default/objects/OM_VID_FieldTranslations__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OM_VID_Object__c</columns>
    <columns>OM_VID_FieldName__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>OM_VID_Language__c</columns>
    <columns>OM_VID_ValueAPIName__c</columns>
    <columns>OM_VID_Translation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>